Prevent squishing headings too much in visual enhancements mode
Also, replace a `px` value with an `em` value in another similar case,
to support users and skins changing base font size. The exact values
don't matter that much.

Bug: T335823

--- a/modules/dt.ui.ReplyWidget.less
+++ b/modules/dt.ui.ReplyWidget.less
@@ -32,7 +32,7 @@
 		// recent property, and only apply this fix on supporting browsers, notably excluding IE 11
 		// (https://caniuse.com/?search=flow-root)
 		display: flow-root;
-		min-width: 250px;
+		min-width: 20em;
 		clear: none;
 	}
 }
